[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://gyrocopter_animated.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/motor.wav" type="AudioStream" id=3]
[ext_resource path="res://WaterCollectible.tscn" type="PackedScene" id=4]
[ext_resource path="res://electric_gyrocopter_animated.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/blades.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SphereShape" id=4]
radius = 5.0

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="CylinderMesh" id=9]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.1, 0.8, 0.1 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.360784, 0.388235, 0.807843, 1 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 0.1, 0.8, 0.1 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.121569, 0.12549, 0.188235, 1 )

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )
WaterScene = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="GyrocopterRotate" type="Spatial" parent="."]

[node name="Gyrocopter" parent="GyrocopterRotate" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="old_gyrocopter" type="Spatial" parent="GyrocopterRotate"]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter"]
mesh = SubResource( 2 )
skeleton = NodePath("../../..")
material/0 = SubResource( 13 )

[node name="Rotor" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 0.2, 0, 1.10706, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")
material/0 = SubResource( 13 )

[node name="WaterHolder" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter"]
transform = Transform( 0.5, 0, 0, 0, -4.37114e-08, -0.5, 0, 1, -2.18557e-08, -1.13975, -1.06639, 0.479565 )
mesh = SubResource( 9 )
skeleton = NodePath("../../..")
material/0 = SubResource( 13 )

[node name="MirrorHolder" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter"]
transform = Transform( 0.353553, -0.353553, 0, 0.353553, 0.353553, 0, 0, 0, 1, 1.11254, -1.06639, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = SubResource( 13 )

[node name="Mirror1" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter/MirrorHolder"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.9, 0.494369, -0.346737, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../../..")

[node name="Mirror2" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter/MirrorHolder"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.9, 0.498164, -0.062124, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../../..")

[node name="Mirror3" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter/MirrorHolder"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.9, 0.475396, 0.287, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../../..")

[node name="Mirror4" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter/MirrorHolder"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.9, 0.49437, -0.673092, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../../..")

[node name="Mirror0" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter/MirrorHolder"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 0.9, 0.471601, 0.609561, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../../../..")

[node name="WaterGauge" type="Spatial" parent="GyrocopterRotate/old_gyrocopter"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.13975, -1.47129, 1.526 )

[node name="WaterLevel" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter/WaterGauge"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0683284, -0.402755 )
mesh = SubResource( 8 )
skeleton = NodePath("../../../..")
material/0 = SubResource( 10 )

[node name="WaterGaugeMesh" type="MeshInstance" parent="GyrocopterRotate/old_gyrocopter"]
transform = Transform( 1.5, 0, 0, 0, 1, 0, 0, 0, 1, -1.13975, -1.06853, 1.52567 )
mesh = SubResource( 11 )
skeleton = NodePath("../../..")
material/0 = SubResource( 12 )

[node name="electric_gyrocopter" parent="GyrocopterRotate" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
visible = false

[node name="MotorSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 5.0
max_distance = 200.0

[node name="BladesSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 20.0
max_distance = 200.0

[node name="WaterReloadTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="Area" to="." method="_on_Area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_exited"]
[connection signal="timeout" from="WaterReloadTimer" to="." method="_on_WaterReloadTimer_timeout"]
